--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ commands:
   check_version:
     steps:
       - run:
+          name: check version
           command: |
             aws --version
 
